[package]

name = "drossel-journal"
version = "0.1.2"
authors = ["Florian Gilcher <florian.gilcher@asquera.de>"]

description = "The journal used by drossel to write to disk"

license = "MIT"

[dependencies]

db-key = "*"
leveldb = "0.6.0"

[dev-dependencies]

tempdir = "0.3.0"

[lib]

name = "drossel_journal"
